--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                             <span class="film-year">2004</span>
                             <span class="film-duration">2ч 32м</span>
                         </div>
-                        <p class="film-description">История жизни легендарного музыканта Рея Чарльза, преодолевшего слепоту и наркозависимость чтобы стать иконой музыки.</p>
+                        <p class="film-description">История жизни легендарного музыканта Рея Чарльза, преодолевшего слепоту и наркoзависимость чтобы стать иконой музыки.</p>
                         <div class="film-benefit">
                             <span class="benefit-icon">🎹</span>
                             <p>Вдохновляющий пример силы воли и преодоления трудностей</p>
@@ -1084,7 +1084,7 @@
         <!-- Подкатегория: Игры -->
         <div id="games" class="subcategory-content">
             <div class="media-grid">
-                <!-- Counter-Strike 2 -->
+                
                 <div class="media-card">
                     <div class="media-image">
                         <div class="image-container">
@@ -1094,7 +1094,7 @@
                     </div>
                     <div class="media-content">
                         <div class="film-genre">Шутер, Мультиплеер</div>
-                        <h3>Counter-Strike 2</h3>
+                        <h3>Cоunter-Strike 2</h3>
                         <div class="film-meta">
                             <span class="film-year">2023</span>
                             <span class="film-duration">Бесконечно</span>
@@ -2131,3 +2131,4 @@
     </script>
 </body>
 </html>
+
