--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                             <span class="film-year">2002</span>
                             <span class="film-duration">2ч 10м</span>
                         </div>
-                        <p class="film-description">Жестокая правда о жизни в фавелах Рио-де-Жанейро, где насилие и бедность становятся повседневностью для местной молодежи.</p>
+                        <p class="film-description">Жестокая правда о жизни в фавелах Рио-де-Жанейро, где насилиe и бедность становятся повседневностью для местной молодежи.</p>
                         <div class="film-benefit">
                             <span class="benefit-icon">👁️</span>
                             <p>Открывает глаза на социальное неравенство и важность образования</p>
@@ -2131,4 +2131,5 @@
     </script>
 </body>
 </html>
+
 
